added all views

--- a/FitnessCentreSite/Content/style.personal.css
+++ b/FitnessCentreSite/Content/style.personal.css
@@ -6,7 +6,7 @@ font-family: Georgia;
 font-size: 14pt;
 color: #B3AEA8;
 background: #000000;
-background-image: url(fon/fon4.jpg);
+background-image: url(Images/fon4.jpg);
 background-position:50% 0px;
 background-repeat: no-repeat;
 margin: 0 auto;
