--- a/FitnessCentreSite/Views/Services/Services.cshtml
+++ b/FitnessCentreSite/Views/Services/Services.cshtml
@@ -13,15 +13,15 @@
     </center>
     <div class="fit">
 
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/bas.png")" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/BOJ.png")" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/GRUP.png")" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/IGR.png")" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/MULT.png")" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/SAUN.png")" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/TEN.png")" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/TREN.png")" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/PERS.png")" /></a></div>
+        <div class="fotoDiv"><a href="/Services/ServiceUnit"><img src="@Url.Content("~/Content/Images/uslug/bas.png")" /></a></div>
+        <div class="fotoDiv"><a href="/Services/ServiceUnit"><img src="@Url.Content("~/Content/Images/uslug/BOJ.png")" /></a></div>
+        <div class="fotoDiv"><a href="/Services/ServiceUnit"><img src="@Url.Content("~/Content/Images/uslug/GRUP.png")" /></a></div>
+        <div class="fotoDiv"><a href="/Services/ServiceUnit"><img src="@Url.Content("~/Content/Images/uslug/IGR.png")" /></a></div>
+        <div class="fotoDiv"><a href="/Services/ServiceUnit"><img src="@Url.Content("~/Content/Images/uslug/MULT.png")" /></a></div>
+        <div class="fotoDiv"><a href="/Services/ServiceUnit"><img src="@Url.Content("~/Content/Images/uslug/SAUN.png")" /></a></div>
+        <div class="fotoDiv"><a href="/Services/ServiceUnit"><img src="@Url.Content("~/Content/Images/uslug/TEN.png")" /></a></div>
+        <div class="fotoDiv"><a href="/Services/ServiceUnit"><img src="@Url.Content("~/Content/Images/uslug/TREN.png")" /></a></div>
+        <div class="fotoDiv"><a href="/Services/ServiceUnit"><img src="@Url.Content("~/Content/Images/uslug/PERS.png")" /></a></div>
 
 
 
