--- a/FitnessCentreSite/Views/Shared/_Layout.cshtml
+++ b/FitnessCentreSite/Views/Shared/_Layout.cshtml
@@ -35,9 +35,8 @@
                 <ul>
                     <li>@Html.ActionLink("Главная","Index","Home")</li>
                     <li>@Html.ActionLink("Услуги","Services","Services")</li>
-                    <li><a href="rasp/rasp.html"><b>Расписание</b></a></li>
                     <li>@Html.ActionLink("Персонал","Traners","Traners")</li>
-                    <li><a href="magazin.html"><b>Магазин</b></a></li>
+                    <li>@Html.ActionLink("Магазин","Store","Store")</li>
                     <li>@Html.ActionLink("FAQ","Fraq","Faq")</li>
                 </ul>
             </nav>
