--- a/FitnessCentreSite/Views/Faq/faq.cshtml
+++ b/FitnessCentreSite/Views/Faq/faq.cshtml
@@ -4,7 +4,7 @@
 }
 
 <center>
-    <div class="faq">
+    <div class="faq" style="background-color:white;">
         <center><h3>FAQ</h3></center>
         <h3 align="left">Сколько стоит клубная карта?</h3>
         <p align="left">Стоимость клубной карты на прямую зависит от вида карты и срока её действия и варьируется от 800 до 1200 рублей в месяц, а в период проведения специальных ценовых акций предусмотрины различные бонусы и скидки относительно базовых цен. Мы предлагаем множество различных вариантов посещения клуба, и нам необходимо подобрать именно такой, чтобы Вам было удобно, чтобы было интересно тренироваться, и Вы получили нужный Вам результат. Но сначала нам с Вами нужно убедиться, что Вам здесь нравиться и в клубе есть всё, что Вам необходимо. Вы сейчас как-то поддерживаете форму?</p>
