--- a/FitnessCentreSite/Views/Shared/_Layout.cshtml
+++ b/FitnessCentreSite/Views/Shared/_Layout.cshtml
@@ -50,7 +50,8 @@
             </div>
         </div>
     </div>
-
+<div id="header">
+</div>
    
 
     <div class="render-body" style="margin-top: 200px;">
