--- a/FitnessCentreSite/Views/Store/Store.cshtml
+++ b/FitnessCentreSite/Views/Store/Store.cshtml
@@ -55,8 +55,9 @@
             </div>
         </div>
     </div>
-
-    <div class="main" style="margin-top:300px;">
+<div id="header">
+</div>
+    <div class="main" style="margin-top:200px;">
         <div class="fit">
             <div class="sidebar">
                 <h2>Каталог товаров:</h2>
