--- a/FitnessCentreSite/Views/Admin/Admin.cshtml
+++ b/FitnessCentreSite/Views/Admin/Admin.cshtml
@@ -1,8 +1,21 @@
-﻿
+﻿@model IEnumerable<FitnessCentreSite.Models.AbonOrder>
 @{
     ViewBag.Title = "Admin";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Admin</h2>
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Admin</title>
+</head>
+<body>
+<div id="main">
+    <h2>Admin Panel</h2>
+    <h4>Cart Orders</h4>
+    @foreach (var item in Model)
+    {
+        <div>@Html.DisplayFor(model => item.Name)&nbsp;&nbsp;&nbsp;@Html.DisplayFor(model => item.Phone)</div>
+    }
+</div>
+</body>
+</html>
