--- a/FitnessCentreSite/Views/Shared/_LoginPartial.cshtml
+++ b/FitnessCentreSite/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
         @Html.AntiForgeryToken()
 
         <center>
-            @User.Identity.GetUserName()<br/>
+            @Html.ActionLink("Профиль", "UserProfile", "Account")&nbsp;&nbsp;
             <a href="javascript:document.getElementById('logoutForm').submit()">Выйти</a>
         </center>
 
